## Process this file with automake to generate Makefile.in


AUTOMAKE_OPTIONS = cygnus

boardsdir = $(pkgdatadir)/baseboards

boards_DATA = @BOARDS@

boards = \
	     arc-sim.exp \
	     arm-ice.exp \
	     arm-sim.exp \
	     basic-sim.exp \
	     cygmon.exp \
	     cygwin.exp \
	     d10v-sim.exp \
	     d10v.exp \
	     d30v-sim.exp \
	     danlite-elf.exp \
	     dos.exp \
	     fr30-elf.exp \
	     fr30-sim.exp \
	     h8300-sim.exp \
	     h8300.exp \
	     i386-bozo.exp \
	     i960-cyclone.exp \
	     i960-sim.exp \
	     m32r-elf.exp \
	     m32r-sim.exp \
	     m68k-emc.exp \
	     mips-idt.exp \
	     mips-lnews-sim.exp \
	     mips-lsi-sim.exp \
	     mips-sim.exp \
	     mips64-sim.exp \
	     mips64vr4100-sim.exp \
	     mn10200-cygmon.exp \
	     mn10200-sim.exp \
	     mn10300-cygmon.exp \
	     mn10300-sim.exp \
	     msparc-cygmon.exp \
	     op50n.exp \
	     powerpc-bug.exp \
	     powerpc-bug1.exp \
	     powerpc-sim.exp \
	     powerpcle-sim.exp \
	     rom68k-idp.exp \
	     sh-hms-sim.exp \
	     sh-hms.exp \
	     sparc64-sim.exp \
	     sparclet-aout.exp \
	     sparclite-coff.exp \
	     sparclite-cygmon.exp \
	     sparclite-sim-le.exp \
	     sparclite-sim.exp \
	     tx39-dve.exp \
	     tx39-sim.exp \
	     unix.exp \
	     usparc-cygmon.exp \
	     v850-sim.exp \
	     vr4100-ddb.exp \
	     vr4100-sim.exp \
	     vr4300-ddb.exp \
	     vr4300-sim.exp \
	     vr4300.exp \
	     vr5000-ddb.exp \
	     vx4300.exp \
	     vx68k.exp \
	     vx960.exp \
	     vxsparc.exp
