## Process this file with automake to generate Makefile.in

# AUTOMAKE_OPTIONS = 

configdir = $(pkgdatadir)/config

config_DATA = @CONFIG@

config = \
	     arc.exp \
	     arm-ice.exp \
	     base-config.exp \
	     base68k.exp \
	     bug.exp \
	     cygmon.exp \
	     d10v.exp \
	     ddb-ether.exp \
	     ddb.exp \
	     dos.exp \
	     dve.exp \
	     gdb-comm.exp \
	     gdb_stub.exp \
	     h8300.exp \
	     i386-bozo.exp \
	     i960.exp \
	     m32r-stub.exp \
	     m32r.exp \
	     m68k-emc.exp \
	     mips-idt.exp \
	     mn10200-eval.exp \
	     mn10300-eval.exp \
	     netware.exp \
	     powerpc-bug.exp \
	     proelf.exp \
	     rom68k.exp \
	     sh.exp \
	     sim.exp \
	     slite.exp \
	     sparclet.exp \
	     udi.exp \
	     unix.exp \
	     vr4100.exp \
	     vr4300.exp \
	     vr5000.exp \
	     vrtx.exp \
	     vxworks.exp
