## Process this file with automake to generate Makefile.in

# AUTOMAKE_OPTIONS =

pkgdata_DATA = debugger.exp dg.exp framework.exp ftp.exp kermit.exp \
	     libgloss.exp mondfe.exp remote.exp rlogin.exp rsh.exp \
	     standard.exp target.exp targetdb.exp telnet.exp \
	     tip.exp util-defs.exp utils.exp xsh.exp
